--- a/MeanStack/QuotingDojo/package.json
+++ b/MeanStack/QuotingDojo/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.0",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "mongoose": "^5.0.14"
