--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "python.pythonPath": "/usr/bin/python2.7",
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "workbench.colorCustomizations": {
+        "terminal.foreground": "#3b46e0",
+        "terminal.background": "#0c0a0a"
+    }
 }
